# datadog-mcp

./: .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  cursor-mcp-config.json  pyproject.toml
.cursor/: QUICK_REFERENCE.md
.cursor/agents/: mcp-type-guardian.md
.cursor/rules/: documentation-standards.mdc  fastmcp-best-practices.mdc  mcp-architecture.mdc  pydantic-models.mdc  python-typing.mdc
.cursor/skills/mcp-tool-creator/: SKILL.md
.cursor/skills/type-migration/: SKILL.md
scripts/: test_get_dashboard.py
src/datadog_mcp/: __init__.py  auth.py  server.py
src/datadog_mcp/tools/: __init__.py  aggregations.py  apm.py  dashboards.py  logs.py  metrics.py  monitors.py
src/datadog_mcp/utils/: __init__.py  auth.py  pagination.py  response.py
