[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datadog-mcp"
version = "0.1.0"
description = "MCP Server for Datadog - Search logs, query metrics, manage dashboards, APM traces, and monitors"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "datadog-api-client>=2.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
datadog-mcp = "datadog_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datadog_mcp"]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pyright>=1.1.350",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.5.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = "datadog_api_client.*"
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false
# Ignore third-party libraries without type stubs
reportMissingModuleSource = false
# Ignore unknown types from third-party libraries
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["datadog_mcp"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=3.8.0",
    "ruff>=0.6.0",
]
